tests/baselines/reference/parserStrictMode3-negative.errors.txt
tests/cases/conformance/parser/ecmascript5/StrictMode/parserStrictMode3-negative.ts(1,1): error TS2539: Cannot assign to 'eval' because it is not a variable.


==== tests/cases/conformance/parser/ecmascript5/StrictMode/parserStrictMode3-negative.ts (1 errors) ====
    eval = 1;
    ~~~~
!!! error TS2539: Cannot assign to 'eval' because it is not a variable.